[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Main_menu.gd" type="Script" id=1]
[ext_resource path="res://Mp3/Musics/MainMusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Version.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Achievements.tscn" type="PackedScene" id=5]
[ext_resource path="res://Images/Others/Trophy.png" type="Texture" id=6]
[ext_resource path="res://Animations/Menu/MenuAnimation6.png" type="Texture" id=7]
[ext_resource path="res://Animations/Menu/MenuAnimation8.png" type="Texture" id=8]
[ext_resource path="res://Animations/Menu/MenuAnimation1.png" type="Texture" id=9]
[ext_resource path="res://Animations/Menu/MenuAnimation5.png" type="Texture" id=10]
[ext_resource path="res://Animations/Menu/MenuAnimation2.png" type="Texture" id=11]
[ext_resource path="res://Animations/Menu/MenuAnimation3.png" type="Texture" id=12]
[ext_resource path="res://Animations/Menu/MenuAnimation7.png" type="Texture" id=13]
[ext_resource path="res://Animations/Menu/MenuAnimation4.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 3.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Start:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1.5, 1.8, 2.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Start:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1.5, 1.8, 2.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Upgrades:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.6, 0.9, 1.8, 2.1, 2.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Upgrades:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.6, 0.9, 1.8, 2.1, 2.4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Options2:rect_scale:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.9, 1.2, 2.1, 2.4, 2.7 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Options2:rect_scale:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.9, 1.2, 2.1, 2.4, 2.7 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Quit:rect_scale:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.4, 2.7, 3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Quit:rect_scale:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.4, 2.7, 3 )
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1368.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.631373 )
position = Vector2( 683, 384 )
frames = SubResource( 5 )
animation = "Run"
frame = 6
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 634.0
margin_top = 136.0
margin_right = 771.0
margin_bottom = 152.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 70.4, 8.7 )
size_flags_horizontal = 6
size_flags_vertical = 2
text = "Spaceships"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="Version" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 727 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )

[node name="Options" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Start" type="Button" parent="."]
margin_left = 653.0
margin_top = 298.0
margin_right = 723.0
margin_bottom = 318.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 35, 10 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Play"

[node name="Upgrades" type="Button" parent="."]
margin_left = 653.0
margin_top = 389.0
margin_right = 723.0
margin_bottom = 409.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 35, 10 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Upgrades"

[node name="Options2" type="Button" parent="."]
margin_left = 653.0
margin_top = 484.0
margin_right = 723.0
margin_bottom = 504.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 35, 10 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="."]
margin_left = 653.0
margin_top = 577.0
margin_right = 723.0
margin_bottom = 597.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 35, 10 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Quit"

[node name="Achivs" type="Button" parent="."]
margin_left = 1368.0
margin_top = 672.0
margin_right = 1388.0
margin_bottom = 696.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 35, 10 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 6 )

[node name="Achievements" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="button_up" from="Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Upgrades" to="." method="_on_Upgrades_button_up"]
[connection signal="button_up" from="Options2" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="Achivs" to="." method="_on_Achivs_button_up"]
